--- a/data/resumeSection.yml
+++ b/data/resumeSection.yml
@@ -1,5 +1,5 @@
 ---
-enable: false
+enable: true
 topTitle: My Resume
 title: "## My Expertises\nLorem ipsum dolor sit amet, consetetur sadipscing elitr,
   sed diam nonumy eirmod tempor invidunt ut labore et dolore  \n\nMagna aliquyam erat,
